// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`link inside list 1`] = `
<DocumentFragment>
  <ul
    class="MuiList-root MuiList-padding css-h4y409-MuiList-root"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-1arpvku-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiListItem-root"
      href="/page2"
      tabindex="0"
    >
      Item
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </ul>
</DocumentFragment>
`;

exports[`link link with href 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
    href="http://example.org"
  >
    Link
  </a>
</DocumentFragment>
`;

exports[`link link with ref 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
  >
    Link
  </a>
</DocumentFragment>
`;

exports[`link link with to 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
    href="/page2"
  >
    Link
  </a>
</DocumentFragment>
`;

exports[`link should be rendered correctly 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
  >
    Link
  </a>
</DocumentFragment>
`;
